--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
 </head>
+<style href="style.css">
 <body>
     <h1>Titulo pagina</h1>
     <p>modificacion 1</p>
